# PROJECT_QML

./: AboutPage.qml  Buy.qml  CMakeLists.txt  CartPage.qml  CatalogPage.qml  ContactPage.qml  FavoritesPage.qml  HomePage.qml  Main.qml  MenuKek.qml  ProfilePage.qml  main.cpp
